src/test/ui/derives/derive-on-trait-item-or-impl-item.stderr
error: `derive` may only be applied to structs, enums and unions
  --> $DIR/derive-on-trait-item-or-impl-item.rs:12:5
   |
LL |     #[derive(Clone)]
   |     ^^^^^^^^^^^^^^^^

error: `derive` may only be applied to structs, enums and unions
  --> $DIR/derive-on-trait-item-or-impl-item.rs:20:5
   |
LL |     #[derive(Clone)]
   |     ^^^^^^^^^^^^^^^^

error: aborting due to 2 previous errors

